--- a/docs/source/notebooks/toolbox/m6A-RNA/m6A-RNA-regulators.ipynb
+++ b/docs/source/notebooks/toolbox/m6A-RNA/m6A-RNA-regulators.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "98e9c8dc",
+   "id": "e02311f8",
    "metadata": {},
    "source": [
     "# epitranscriptomics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e42f4e42",
+   "id": "08741ab2",
    "metadata": {},
    "source": [
     "## Questions\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2b88670",
+   "id": "5858f2a8",
    "metadata": {},
    "source": [
     "![m6A RNA dynamics](m6A-RNA-dynamics.jpg)"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aa6f3f6",
+   "id": "a7535345",
    "metadata": {},
    "source": [
     "Writer - m6A is added to mRNAs by a core writer complex consisting of a methyltransferase\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1842901b",
+   "id": "1dd2ae46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "84774d47",
+   "id": "f2dc2ebb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ba56d386",
+   "id": "2417ff81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dcf3686b",
+   "id": "4bb83c84",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "62caada3",
+   "id": "2ece2305",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1bd9e6bc",
+   "id": "df2eeb17",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c400897a",
+   "id": "f23a152d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f3ca6a14",
+   "id": "fcec9077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5091e821",
+   "id": "a491e2dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8f6c6aad",
+   "id": "67064981",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5b8fd05c",
+   "id": "76c594fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "49ff58a1",
+   "id": "e69e8cd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4cf32427",
+   "id": "62ae719c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e8cd8d2f",
+   "id": "aff24d72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6272e5a4",
+   "id": "248febc7",
    "metadata": {},
    "source": [
     "## m6A sequencing methods\n",
@@ -251,7 +251,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e6fb945",
+   "id": "6b482047",
+   "metadata": {},
+   "source": [
+    "## computational tools for prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0895121",
+   "metadata": {},
+   "source": [
+    "- Deep learning modeling m6A deposition reveals the importance of downstream cis-element sequences\n",
+    "- EDLm6APred: ensemble deep learning approach for mRNA m6A site prediction\n",
+    "- DeepM6ASeq: prediction and characterization of m6A-containing sequences using deep learning\n",
+    "- Deep and accurate detection of m6A RNA modifications using miCLIP2 and m6Aboost machine learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a6c13f5",
    "metadata": {},
    "source": [
     "## References\n",
@@ -261,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a467ea6",
+   "id": "740955de",
    "metadata": {},
    "outputs": [],
    "source": []
