--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -96,12 +96,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10740164",
+   "id": "a4c47433",
    "metadata": {},
    "source": [
     "缩减成本：\n",
     "- [Compressed Perturb-seq: highly efficient screens for regulatory circuits using random composite perturbations](https://www.biorxiv.org/content/10.1101/2023.01.23.525200v1.full)\n",
-    "- 按Droplet个数收费，所以要引入doublet，然后用计算的方法分开。"
+    "- Perturb-seq按Droplet个数收费，所以要引入doublet，然后用计算的方法分开。"
    ]
   },
   {
