--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -101,6 +101,7 @@
    "source": [
     "缩减成本：\n",
     "- [Compressed Perturb-seq: highly efficient screens for regulatory circuits using random composite perturbations](https://www.biorxiv.org/content/10.1101/2023.01.23.525200v1.full)\n",
+    "- Perturb seq need scRNA for 9000x 200 cells/guide = 1800000 cells \n",
     "- Perturb-seq按Droplet个数收费，所以要引入doublet，然后用计算的方法分开。"
    ]
   },
