--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -72,6 +72,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6bdb8cca",
+   "metadata": {},
+   "source": [
+    "Examples:\n",
+    "- [E07.2 Genome Wide CRISPR Cas9 Screening in Immune Cells](https://youtu.be/IlYVi149Sxg)\n",
+    "- context-based regulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e7f7acc7",
    "metadata": {},
    "source": [
@@ -161,6 +171,18 @@
     "- 举一反三太难了，因为这个系统的调控过于复杂。\n",
     "\n",
     "- 目前基因治疗技术手段繁多，主要的瓶颈在于找到有价值有效果的靶点。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5968aabe",
+   "metadata": {},
+   "source": [
+    "我的一些核心思考：\n",
+    "- 毕业前夕到来DFCI后的一段时间，我曾经有过很多灵感，开发属于自己的工具，但都没有继续，她们是高度关联的，现在我想串联一下；\n",
+    "- bt2m/iterbi：解决异质性的问题，本质就是一个无偏的module identification工具，还可以做到多组学，类似WGCNA和MIRA；\n",
+    "- CRAI：这是我对causal GRN最深层次的思考，这个仅能在perturb-seq上实现；\n",
+    "- 尽管这段时间我接触了很多fancy的新工具，我还是觉得这两个工具有她们存在的价值；"
    ]
   },
   {
