--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -100,6 +100,15 @@
    "metadata": {},
    "source": [
     "## Perturb-seq\n",
+    "From Paul:\n",
+    "- 10x chromium v3.1 feature barcoding\n",
+    "- [Chromium Single Cell 3' Reagent Kits User Guide (v3.1 Chemistry Dual Index) with Feature Barcoding technology for CRISPR Screening and Cell Multiplexing](https://www.10xgenomics.com/support/single-cell-gene-expression/documentation/steps/library-prep/chromium-single-cell-3-reagent-kits-user-guide-v-3-1-chemistry-dual-index-with-feature-barcoding-technology-for-crispr-screening-and-cell-multiplexing)\n",
+    "- https://cdn.10xgenomics.com/image/upload/v1666737555/support-documents/CG000389_ChromiumNextGEMSingleCell3-v3.1_CRISPR_CellMultiplexing_RevC.pdf\n",
+    "- Step 1: Paul design gRNA, plasmid, lentivirus, infect cell line, prepare cell suspensions\n",
+    "- Step 2: the core with load the cells to 10x machine, build GEX and gRNA DNA libraries with different dilution\n",
+    "- QC: see if there is a sharp peak, choose the 1:1 dilution for sequencing\n",
+    "\n",
+    "YT:\n",
     "- [Next generation CRISPR screens based on single-cell transcriptomics | Tilmann Buerckstuemmer](https://youtu.be/t3fk560-BTY)\n",
     "- [Anja Smith-How to identify key genes with CRISPR Cas9 and shRNA screens](https://youtu.be/GhMgdNgaMbY)"
    ]
