--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -107,6 +107,8 @@
     "- Step 1: Paul design gRNA, plasmid, lentivirus, infect cell line, prepare cell suspensions\n",
     "- Step 2: the core with load the cells to 10x machine, build GEX and gRNA DNA libraries with different dilution\n",
     "- QC: see if there is a sharp peak, choose the 1:1 dilution for sequencing\n",
+    "- results: ~18k cells - 10k dollars \n",
+    "- 9k cells - 24 gRNA - 12 genes, CRISPRi\n",
     "\n",
     "YT:\n",
     "- [Next generation CRISPR screens based on single-cell transcriptomics | Tilmann Buerckstuemmer](https://youtu.be/t3fk560-BTY)\n",
