--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -197,6 +197,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1abc702a",
+   "metadata": {},
+   "source": [
+    "### Perturb-seq CCI\n",
+    "- Droplet-based forward genetic screening of astrocyte–microglia cross-talk - Science - 2023"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a6e53ab",
+   "metadata": {},
+   "source": [
+    "### Perturb-seq human mutations\n",
+    "- Stepwise-edited, human melanoma models reveal mutations’ effect on tumor and microenvironment - 2022 - Science"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f84165c3",
