--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -215,6 +215,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "066e4433",
+   "metadata": {},
+   "source": [
+    "### Multiple gRNA per vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b464927f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9d60560",
+   "metadata": {},
+   "source": [
+    "##  Base editing\n",
+    "- https://github.com/mhegde/base-editor-design-tool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44a2c8ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f00fa89",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f84165c3",
