--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -225,7 +225,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b464927f",
+   "id": "ca4312a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "417c0cef",
+   "metadata": {},
+   "source": [
+    "### Experiences\n",
+    "#### batch1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0ab6b49",
+   "metadata": {},
+   "source": [
+    "#### batch2\n",
+    "1. design oligos gRNA for target genes\n",
+    "2. make plasmid with gRNA\n",
+    "3. make lentivirus with 3 plasmid system\n",
+    "4. infect cells and cell sorting - lentivirus titer\n",
+    "5. 10x perturb-seq lib prep, bioanalyzer [DFCI core]\n",
+    "6. sequencing and data analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5abeec82",
    "metadata": {},
    "outputs": [],
    "source": []
