--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -254,6 +254,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa2af327",
+   "metadata": {},
+   "source": [
+    "#### Plasmid\n",
+    "- google idt crispr, three elements: Cas9 + tracRNA + gRNA\n",
+    "- pCC01: CRISPR KO (one-vector-system)\n",
+    "- pCC09: CRISPRi dCas9-KRAB (one-vector-system)\n",
+    "- pBA904: encodes the gRNA to be used with CRISPRi dCas9-KRAB-Zim3 (two-vector-system)\n",
+    "- pJB109: encodes the dCas9-KRAB-Zim3 (two-vector system)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e40b067",
+   "metadata": {},
+   "source": [
+    "#### olig gRNA to plasmid\n",
+    "- neb hifi cloning\n",
+    "- NEBuilder HiFi DNA Assembly: Bridging dsDNA with a ssDNA Oligo\n",
+    "- https://youtu.be/4wv4ETxL5PE\n",
+    "- SnapGene, https://www.snapgene.com/academy?referrer=SnapGene%20Viewer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2290187e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5abeec82",
