--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -232,10 +232,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "417c0cef",
+   "id": "51685bcd",
    "metadata": {},
    "source": [
     "### Experiences\n",
+    "- 10x library: [Chromium Single Cell Gene Expression with Feature Barcoding\tAnalysis](https://gccri.uthscsa.edu/wp-content/uploads/sites/128/2020/04/Chromium-Single-Cell-software-training.pdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "417c0cef",
+   "metadata": {},
+   "source": [
     "#### batch1"
    ]
   },
