--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -77,7 +77,9 @@
    "source": [
     "Examples:\n",
     "- [E07.2 Genome Wide CRISPR Cas9 Screening in Immune Cells](https://youtu.be/IlYVi149Sxg)\n",
-    "- context-based regulation"
+    "- context-based regulation\n",
+    "- [KAT6A and ENL form an epigenetic transcriptional control module to drive critical leukemogenic gene expression programs - 2022 - Cancer Discov](https://doi.org/10.1158/2159-8290.CD-20-1459)\n",
+    "- [Genome-scale CRISPR-Cas9 screen of Wnt/β-catenin signaling identifies therapeutic targets for colorectal cancer - 2021 - SCIENCE ADVANCES](https://www.science.org/doi/full/10.1126/sciadv.abf2567)"
    ]
   },
   {
