--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -141,7 +141,9 @@
     "- Comparative optimization of combinatorial CRISPR screens - NC - 2022\n",
     "\n",
     "- In vivo Perturb-Seq reveals neuronal and glial abnormalities associated with autism risk genes - 2020 - Science\n",
-    "- The phenotypic landscape of essential human genes - 2022 - Cell"
+    "- The phenotypic landscape of essential human genes - 2022 - Cell\n",
+    "\n",
+    "- Structural and functional properties of mSWI/SNF chromatin remodeling complexes revealed through single-cell perturbation screens - MC - 2023"
    ]
   },
   {
