--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -98,6 +98,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1cd6decf",
+   "metadata": {},
+   "source": [
+    "### pipeline\n",
+    "- The CDK inhibitor CR8 acts as a molecular glue degrader that depletes cyclin K - Nature - 2020 [From Paul]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b18a78ba",
    "metadata": {},
    "source": [
@@ -130,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61abaa9b",
+   "id": "bc3936a2",
    "metadata": {},
    "source": [
     "references:\n",
@@ -141,10 +150,66 @@
     "- Comparative optimization of combinatorial CRISPR screens - NC - 2022\n",
     "\n",
     "- In vivo Perturb-Seq reveals neuronal and glial abnormalities associated with autism risk genes - 2020 - Science\n",
-    "- The phenotypic landscape of essential human genes - 2022 - Cell\n",
-    "\n",
+    "- The phenotypic landscape of essential human genes - 2022 - Cell"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61abaa9b",
+   "metadata": {},
+   "source": [
+    "### SWI/SNP\n",
     "- Structural and functional properties of mSWI/SNF chromatin remodeling complexes revealed through single-cell perturbation screens - MC - 2023"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "175a7156",
+   "metadata": {},
+   "source": [
+    "- Yeah this is Weissman lab's 1st-gen perturb-seq vector. We have this vector pBA439\n",
+    "\n",
+    "- Indirect capture of guide information allows for multiomics prep. \n",
+    "\n",
+    "- Currently 10X doesn't support direct-capture multiomics\n",
+    "\n",
+    "- Anyway 100K cells sequenced for the single KO screen and 18K cells for combinatorial screen\n",
+    "\n",
+    "- I'd like to get to this point too "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "547a5c41",
+   "metadata": {},
+   "source": [
+    "### Broad E3-ligase Perturb-seq\n",
+    "- Systematically characterizing the roles of E3-ligase family members in inflammatory responses with massively parallel Perturb-seq\n",
+    "- https://www.biorxiv.org/content/10.1101/2023.01.23.525198v1.full"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bef1f12a",
+   "metadata": {},
+   "source": [
+    "- The Broad’s most recent Perturb-seq paper from Aviv Regev and Caroline Uhler uses a LentiCRISPRv2 derived vector containing Capture Sequence 2 3’ of the scaffold.\n",
+    " \n",
+    "- This is exactly what I cloned last July.\n",
+    " \n",
+    "- BUT they also stayed away from puro selection and used an mKate2 for selection instead.\n",
+    " \n",
+    " \n",
+    "- “On day 9, cells were stimulated for 3 hours with 100 ng/mL LPS (Invivogen, tlrl-peklps) and harvested by scraping. Cells then underwent antibody staining for cell hashing (described below) and mKate2+(perturbation vector) and GFP+ (Cas9) cells were enriched by Fluorescence Activated Cell Sorting (FACS) (∼8% population) prior to single cell library generation (Figure S1).”"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66b44d96",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -155,7 +220,8 @@
     "- https://sellerslab.org/\n",
     "- Feng Zhang\n",
     "- Aviv Regev\n",
-    "- https://marsonlab.org/"
+    "- https://marsonlab.org/\n",
+    "- Weissman lab - https://weissman.wi.mit.edu/"
    ]
   },
   {
