--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -22,7 +22,7 @@
     "- https://sourceforge.net/p/mageck/wiki/Home/\n",
     "\n",
     "Main cost:\n",
-    "- cell sorting fee (5k)\n",
+    "- cell sorting fee (5k) / puro is much cheaper\n",
     "- gRNA (500)\n",
     "- 10 ~ 20k in total for a whole genome screening\n",
     "\n",
@@ -204,12 +204,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66b44d96",
+   "cell_type": "markdown",
+   "id": "2d0c54f5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- lentiCRISPR v2 - https://www.addgene.org/52961/\n",
+    "- Cas12a - much shorter\n",
+    "- [What is CRISPR?](https://youtu.be/MnYppmstxIs)\n",
+    "- crRNA - After binding to the CRISPR effector protein, crRNA serves as a guide to position the protein–RNA complex, often referred to as ribonucleoprotein (RNP), on the targeting DNA sequence (occurring in invading viruses or plasmids) that is complementary to the crRNA spacer sequence (called proto-spacer).\n",
+    "- tracrRNA - Abbreviation for trans-activating CRISPR RNA, pronounced “tracer RNA.” In the CRISPR-Cas9 system, the tracrRNA base pairs with the crRNA to form a functional guide RNA (gRNA). Cas9 uses the tracrRNA portion of the guide as a handle, while the crRNA spacer sequence directs the complex to a matching viral sequence.\n",
+    "- PAM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5a52a6c",
+   "metadata": {},
+   "source": [
+    "design gRNA:\n",
+    "- [CRISPR Cas9 - gRNA Design](https://youtu.be/dXPDefej0Ps)\n",
+    "- chopchop - https://chopchop.cbu.uib.no/\n",
+    "- CRISPick - https://portals.broadinstitute.org/gppx/crispick/public [Paul]\n",
+    "- just add the cutsite adapter to head and tail of ~20 gRNA, PAM is in genome already"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97825c51",
+   "metadata": {},
+   "source": [
+    "lentivirus:\n",
+    "- [Lentivirus Titration: How to Determine Viral Titer](https://youtu.be/Zw57RzY0BFY)\n",
+    "- [https://youtu.be/rfw_rcP5XOA](https://youtu.be/rfw_rcP5XOA)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,7 +248,8 @@
     "- Feng Zhang\n",
     "- Aviv Regev\n",
     "- https://marsonlab.org/\n",
-    "- Weissman lab - https://weissman.wi.mit.edu/"
+    "- Weissman lab - https://weissman.wi.mit.edu/\n",
+    "- Broad GPP - Genetic Perturbation Platform - https://portals.broadinstitute.org/gpp/public/"
    ]
   },
   {
@@ -337,11 +365,14 @@
    "metadata": {},
    "source": [
     "#### Plasmid\n",
-    "- google idt crispr, three elements: Cas9 + tracRNA + gRNA\n",
+    "- google idt crispr, three elements: Cas9 + tracRNA + gRNA [Cas9 and tracRNA are in fixed in plasmid, only need to consider gRNA design, PAM is in genome]\n",
+    "\n",
     "- pCC01: CRISPR KO (one-vector-system)\n",
     "- pCC09: CRISPRi dCas9-KRAB (one-vector-system)\n",
     "- pBA904: encodes the gRNA to be used with CRISPRi dCas9-KRAB-Zim3 (two-vector-system)\n",
-    "- pJB109: encodes the dCas9-KRAB-Zim3 (two-vector system)"
+    "- pJB109: encodes the dCas9-KRAB-Zim3 (two-vector system)\n",
+    "\n",
+    "- pPD01.gb: replace puro by EGFP in pCC01"
    ]
   },
   {
@@ -363,6 +394,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad920a32",
+   "metadata": {},
+   "source": [
+    "#### plasmid engineering\n",
+    "- Task: pPD01.gb: replace puro by EGFP in pCC01\n",
+    "- knock in a cut site\n",
+    "- [Q5® Site-Directed Mutagenesis Kit](https://www.neb.com/products/e0554-q5-site-directed-mutagenesis-kit#Product%20Information)\n",
+    "- primers with adapters to extract EGFP from another plasmid PCR"
+   ]
   },
   {
    "cell_type": "code",
