--- a/docs/source/notebooks/theme-based/Drug.ipynb
+++ b/docs/source/notebooks/theme-based/Drug.ipynb
@@ -18,9 +18,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac9ae6e9",
+   "metadata": {},
+   "source": [
+    "## MRK60"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8ded214",
+   "metadata": {},
+   "source": [
+    "### HDACi\n",
+    "- [New and emerging HDAC inhibitors for cancer treatment](https://www.jci.org/articles/view/69738) - JCI - 2014"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c451e92",
+   "metadata": {},
+   "source": [
+    "analysis:\n",
+    "- [Integrating ChIP-seq with other functional genomics data](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5888983/)\n",
+    "- ChIPpeakAnno\n",
+    "- https://bioconductor.org/packages/release/bioc/vignettes/ChIPpeakAnno/inst/doc/pipeline.html\n",
+    "- ChIPseeker\n",
+    "- http://bioconductor.org/packages/devel/bioc/vignettes/ChIPseeker/inst/doc/ChIPseeker.html\n",
+    "- [Visualization of peaks - HBC](https://hbctraining.github.io/Intro-to-ChIPseq/lessons/10_data_visualization.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2eb98f1b",
+   "metadata": {},
+   "source": [
+    "ref:\n",
+    "- [KAT6A and ENL Form an Epigenetic Transcriptional Control Module to Drive Critical Leukemogenic Gene-Expression Programs](https://doi.org/10.1158/2159-8290.CD-20-1459)\n",
+    "- \n",
+    "\n",
+    "- [The Roles of Histone Deacetylases and Their Inhibitors in Cancer Therapy](https://www.frontiersin.org/articles/10.3389/fcell.2020.576946/full)\n",
+    "- [Erasers of Histone Acetylation: The Histone Deacetylase Enzymes](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3970420/)\n",
+    "\n",
+    "- [Pioneer factors as master regulators of the epigenome and cell fate](https://www.nature.com/articles/s41580-022-00464-z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ea00084",
+   "metadata": {},
+   "source": [
+    "Oncogenes\n",
+    "- KRAS\n",
+    "- [Role of oncogenic KRAS in the prognosis, diagnosis and treatment of colorectal cancer](https://molecular-cancer.biomedcentral.com/articles/10.1186/s12943-021-01441-4)\n",
+    "\n",
+    "TSG (Tumor Suppressor Gene)\n",
+    "- APC\n",
+    "- [Multiple Roles of APC and its Therapeutic Implications in Colorectal Cancer](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5963831/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1968d950",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "- [Peak-valley-peak pattern of histone modifications delineates active regulatory elements and their directionality](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4872112/)\n",
+    "- Histone mark enrichment distribution near TSS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1827f3c4",
+   "id": "b0e1cc79",
    "metadata": {},
    "outputs": [],
    "source": []
