--- a/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
+++ b/docs/source/notebooks/theme-based/CRISPR-based-Techs.ipynb
@@ -417,6 +417,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf2100db",
+   "metadata": {},
+   "source": [
+    "### MultigRNA Perturb-seq from the Seurat lab\n",
+    "- [Efficient combinatorial targeting of RNA transcripts in single cells with Cas13 RNA Perturb-seq - NM - 2023](https://www.nature.com/articles/s41592-022-01705-x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9a44ec1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "c9d60560",
    "metadata": {},
    "source": [
