--- a/docs/source/notebooks/theme-based/Drug.ipynb
+++ b/docs/source/notebooks/theme-based/Drug.ipynb
@@ -45,7 +45,9 @@
     "- https://bioconductor.org/packages/release/bioc/vignettes/ChIPpeakAnno/inst/doc/pipeline.html\n",
     "- ChIPseeker\n",
     "- http://bioconductor.org/packages/devel/bioc/vignettes/ChIPseeker/inst/doc/ChIPseeker.html\n",
-    "- [Visualization of peaks - HBC](https://hbctraining.github.io/Intro-to-ChIPseq/lessons/10_data_visualization.html)"
+    "- [Intro-to-ChIPseq](https://github.com/hbctraining/Intro-to-ChIPseq/blob/master/schedule/2-day.md) - course list\n",
+    "- [Visualization of peaks - HBC](https://hbctraining.github.io/Intro-to-ChIPseq/lessons/10_data_visualization.html)\n",
+    "- deepTools"
    ]
   },
   {
@@ -88,9 +90,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1842bead",
+   "metadata": {},
+   "source": [
+    "## dTAG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "540a0834",
+   "metadata": {},
+   "source": [
+    "- [Precise modulation of transcription factor levels identifies features underlying dosage sensitivity - NG - 2023](https://www.nature.com/articles/s41588-023-01366-2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24bbce8f",
+   "metadata": {},
+   "source": [
+    "- Stuti Mehta\n",
+    "- Boston children's Hospital\n",
+    "- Lessons from dTAG-mediated acute depletion of the \"undruggable\" transcription factor BCLIA \n",
+    "- Stuti Mehta is a Scientist at the Boston Children's Hospital, and an Instructor at the Harvard Medical School. Stuti studied biochemistry and biotechnology at St. Xavier's college in India, before moving on to obtain an MSc and DPhil (PhD) working on epigenetic mechanisms of gene expression control at the Medical Research Council at Oxford University, UK. Stuti is broadly interested in understanding finer mechanistic details of gene expression control by transcription factors and epigenetic proteins, most recently by deploying targeted protein degradation approaches. At the BCH, she works with Stuart Orkin to use Targeted protein degradation strategies to deplete the repressive Zn-transcription factor BCL11A in service of inducing the curative fetal form of hemoglobin in b-hemoglobin disorders. Here, she also leads a large-scale screening effort to identify from diverse sources, glue-like chemicals that lead to the depletion of, or interference with the repressive function of BCL11A"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0e1cc79",
+   "id": "1ae4a7d7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -119,7 +148,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "300.594px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
