--- a/docs/source/notebooks/theme-based/Drug.ipynb
+++ b/docs/source/notebooks/theme-based/Drug.ipynb
@@ -10,6 +10,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb43e0c5",
+   "metadata": {},
+   "source": [
+    "## Current drugs for CRC\n",
+    "- [Drugs Approved for Colon and Rectal Cancer](https://www.cancer.gov/about-cancer/treatment/drugs/colorectal)\n",
+    "- [一文读懂结直肠癌的化疗、靶向和免疫治疗](https://zhuanlan.zhihu.com/p/69235411)\n",
+    "- [22款治疗结直肠癌的化疗药/靶向药/免疫药物](http://www.100pei.com/4594.html)\n",
+    "- [结直肠癌靶向及免疫药物大盘点，精准治疗时代来了！](https://www.medsci.cn/article/show_article.do?id=5546e280142e)\n",
+    "- [按阶段划分的结直肠癌治疗](https://fightcolorectalcancer.org/zh/facing-colorectal-cancer/diagnosis-and-treatment/treatment-stage/)\n",
+    "- 据估计，大约15％的结直肠癌患者的MSI指数高，因此可以用检查点抑制剂如派姆单抗（学名：pembrolizumab）来治疗。\n",
+    "- [2022最新整理丨结直肠癌靶向免疫药物有哪些 效果如何](https://www.hopenoah.com/treat/cancer/jc/15236.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94e89afb",
+   "metadata": {},
+   "source": [
+    "免疫疗法如何用于治疗结直肠癌？\n",
+    "\n",
+    "免疫疗法（immunotherapy）对于结肠癌和直肠癌（cancers of the colon and rectum）治疗效果尚未像对于黑色素瘤和肺癌那样有效，但研究人员正在发现越来越多的从增强免疫药物中获益的患者，并且通过研究希望能将免疫疗法扩展到治疗结直肠癌的策略当中。\n",
+    "\n",
+    "使免疫疗法成为癌症治疗中一个让人兴奋和充满希望的工具的主要药物是检查点抑制剂（checkpoint blockers）。 例如这些可以阻断CTLA-4、PD-1和PD-L1的药物，可以动员免疫系统来攻击那些试图躲避免疫防御的癌细胞。在一些患有晚期黑色素瘤和肺癌的患者中，检查点抑制剂可以使免疫T细胞去缩小或消除肿瘤，具有长期的治疗效果。\n",
+    "\n",
+    "但在几年前，检查点抑制剂首次在晚期结直肠癌患者中进行检测时的结果令人失望；结果表明，检查点抑制剂在大多数患者中对抗肿瘤的活性很小。但这些研究确实揭示了有一小部分结直肠癌患者——他们的肿瘤对免疫治疗有反应。这些患者的癌细胞缺乏修复DNA蓝图特定类型损伤的能力。这类癌症被称为具有高度的“微卫星不稳定性” ，也称作MSI，并且缺乏修复遗传密码不匹配的化学字母。\n",
+    "\n",
+    "在一项研究中，MSI指数高的患者使用PD-1抑制剂派姆单抗（pembrolizumab）来接受治疗，响应率为40％ - 这意味着他们的肿瘤缩小了——相比之下，癌症中没有MSI的患者则没有反应。\n",
+    "\n",
+    "“这些患者中的大多数都具有持续而长久的反应” ，丹娜-法伯免疫肿瘤中心（Center for Immuno-Oncology）的医学博士Osama Rahma (Osama Rahma, MD) 说。\n",
+    "\n",
+    "据估计，大约15％的结直肠癌患者的MSI指数高，因此可以用检查点抑制剂如派姆单抗（学名：pembrolizumab）来治疗。\n",
+    "\n",
+    "人们认为免疫疗法可以更好地对抗DNA修复机制有缺陷的癌症，因为这些肿瘤携带更多的DNA突变，这些突变导致细胞产生异常蛋白质，刺激免疫系统来攻击这些缺陷细胞。但是，对于结直肠癌MSI指数不高的患者，如何才能改善免疫治疗这85%患者中的治疗效果？\n",
+    "\n",
+    "Rahma博士提出了一种策略——将派姆单抗（学名：pembrolizumab）与放射治疗（radiation therapy）结合用于结肠直肠癌。被辐射杀死的细胞会释放出能被T细胞识别的分子，然后T细胞会聚集到肿瘤环境中。这一概念将在一项由丹娜-法伯领导的全美大型直肠癌临床试验中进行测试。\n",
+    "\n",
+    "另一种策略是将免疫疗法检查点抑制剂与靶向疗法（targeted therapy）相结合——靶向药物指通过与癌细胞中特定分子缺陷结合来抑制癌症生长的药物。这种方法的临床试验正在进行中。\n",
+    "\n",
+    "研究也开始涉及不同的抗体，这些抗体可以阻断癌细胞用来逃避免疫攻击的多个免疫检查点，或在阻断一个检查点的同时用另一种分子药物刺激免疫系统。\n",
+    "\n",
+    "“现在，该领域正大放光彩，我们可以测试许多新的假设，旨在改变结直肠癌治疗的前景并改善其结果” ，Rahma博士说。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ed8abe6f",
    "metadata": {},
    "source": [
