--- a/docs/source/notebooks/theme-based/Drug.ipynb
+++ b/docs/source/notebooks/theme-based/Drug.ipynb
@@ -144,6 +144,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a7114b0",
+   "metadata": {},
+   "source": [
+    "- Rapid and direct control of target protein levels with VHL-recruiting dTAG molecules - NC - 2020"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "540a0834",
    "metadata": {},
    "source": [
