--- a/docs/source/notebooks/theme-based/Drug.ipynb
+++ b/docs/source/notebooks/theme-based/Drug.ipynb
@@ -170,9 +170,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8fecea9a",
+   "metadata": {},
+   "source": [
+    "## review\n",
+    "- Trends in the approval of cancer therapies by the FDA in the twenty-first century"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ae4a7d7",
+   "id": "55b5b305",
    "metadata": {},
    "outputs": [],
    "source": []
